2009-12-30  Michiel Roos <michiel@netcreators.com>
	* Fixed bug #11700: use _GPmerged instead of GParrayMerged (Thanks to Ringer Georg)
	* Change: dam 1.2 requires TYPO3 4.3 and PHP 5.2.6
	* Fixed bug #12538: Generated contain an invalid relational operator [DBAL] (Thanks to Xavier Perseguers) 
	* Fixed bug #11936: search in media->list does not work (Thanks to Andreas Kiessling)
	* Change for #9177: Indexing files is not working in NFS Filesystems (Thanks to Ingo Schmitt, Dan Osipov)

2009-12-29  Michiel Roos <michiel@netcreators.com>
	* Feature: #12408: Integrate flash uploader into DAM (Thanks to Dan Osipov)
	* Fixed bug #9177: Indexing files is not working in NFS Filesystems (Thanks to Ingo Schmitt, Dan Osipov)
	* Fixed bug #13031: table definition in tx_dam_media_types (Thanks to Chris Mueller)
	* Fixed bug #12967: Element browser upload page doesn't highlight the actual folder (Thanks to Oliver Krause)

2009-12-21  Michiel Roos <michiel@netcreators.com>
	* Fixed bug #9830: Not responing queries using category selections (Thanks to Peter Kuehn)

2009-12-20  Michiel Roos <michiel@netcreators.com>
	* Fixed #12028: All trees stop working if using TYPO3 4.3. trunk (Thanks to Georg Ringer)

2009-12-13  Michiel Roos <michiel@netcreators.com>
	* Fixed bug #12495: ereg_* functions deprecated in PHP 5.3 (Thanks to Dan Osipov)
	* Fixed bug #12856: Stage two of indexing process lists Dry Run (Thanks to Dan Osipov)
	* Fixed bug #13017: tablename field in tx_dam_mm_ref to short (extbase) (Thanks to Thomas Kieslich)
	* Fixed #11978: echo $GLOBALS['TYPO3_DB']->sql_error(); (Thanks to Dan Osipov)
	* Fixed #13033: Unknow modifier '/' in element browser  (Thanks to Chris Mueller)

2009-10-11  Michiel Roos <michiel@netcreators.com>
	* Fixed bug #10278: Usage of choices is limited to 100  (Thanks to Bernd Schuhmacher)
	* Fixed bug #11388: MSIE 8.0 Elementbrowser layout broken (Thanks to Georg Kuehnberger)